# GeodeVoiceChat

./: CMakeCache.txt  CMakeLists.txt  GEODE.json  GeodeVoiceChat.geode  LICENSE  Makefile  NOTICE.md  README.md  cmake_install.cmake  compile_commands.json
.GitHub/Workflows/: Packager.yml  cmake.yml
.github/workflows/: Packager.yml  build.yml  cmake.yml  create-release.yml  install-geode-cli.yaml  install-geode-cli.yml  make.yml
lib/: voicechatlib.cpp
src/: main.cpp  voicechatlib.h  voicechatmod.cpp  voicechatmod.h
